Fixed qr and comment expand on mobile

--- a/src/theme/mobile.scss
+++ b/src/theme/mobile.scss
@@ -92,7 +92,7 @@ $mobile-width: 1024px;
     }
   }
 
-  .embed > * {
+  .embed > :not(.md) {
     margin: 0;
     width: 98vw;
   }
